<resources>
    <string name="app_name">Grade Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Strings used for fragments for navigation -->
    <string name="start_fragment_label">Start Fragment</string>
    <string name="term_fragment_label">Term Fragment</string>
    <string name="course_fragment_label">Course Fragment</string>
    <string name="assignment_fragment_label">Assignment Fragment</string>
    <string name="grade_fragment_label">Grade Fragment</string>

    <!-- About Dialogs -->
    <string name="authors"><b>Created by:</b>\n\nShae Simeoni &amp; Seth Climenhaga\n\nSheridan College, 2020</string>

    <!-- Shared -->
    <string name="grade">Grade:\u0020</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="blank">-</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="floatToString">%.1f%%</string>
    <string name="pointFormat">%s/%d</string>
    <string name="delete_confirmation">Delete Confirmation</string>

    <!-- Settings Fragment -->
    <string name="greeting">Welcome back %1$s!</string>
    <string name="settings_image_content">Sun/Moon</string>
    <string name="filler_grade">Filler Grade</string>
    <string name="filler_grade_hint">70%</string>
    <string name="reset_data">Reset Data</string>

    <!-- Start Fragment -->
    <string name="grade_tracker">Grade Tracker</string>
    <string name="begin">Begin</string>
    <string name="logo">Logo</string>

    <!-- Data Fragment -->
    <string name="enter_your_info">Enter Your Info</string>
    <string name="name">Name</string>
    <string name="filler_grade_prompt">Filler grade</string>

    <!-- Term Fragment -->
    <string name="term_name_hint">Term Name</string>
    <string name="enter_term">Enter Term</string>
    <string name="add_term">Add Term</string>
    <string name="edit_term">Edit Term</string>
    <string name="term_average">Average:\u0020</string>
    <string name="term_progress">Progress:\u0020</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_picker_string">%1$d/%2$d/%3$d</string>

    <!-- Course Fragment -->
    <string name="add_course">Add Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="enter_course">Enter Course</string>
    <string name="enter_course_hint">Enter Course</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="course_code_hint">Course Code</string>
    <string name="enter_target_grade">Enter Target Grade</string>
    <string name="target_grade_hint">Target Grade</string>
    <string name="course_target">Target:\u0020</string>

    <!-- Assignment Fragment -->
    <string name="total_points">Total Points</string>
    <string name="enter_assignment">Assignment</string>
    <string name="weight">Weight</string>
    <string name="assignment_name_hint">Assignment Name</string>
    <string name="grade_points_hint">Total Points</string>
    <string name="grade_weight_hint">Grade Weight (%)</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="edit_assignment">Edit Assignment</string>
    <string name="assignment_weight">Weight:\u0020</string>
    <string name="summary">Summary</string>
    <string name="current">Current</string>
    <string name="goal">Goal</string>

    <!-- Grade Fragment -->
    <string name="course_grade">Course Grade</string>
    <string name="grade_predictor">Grade Predictor</string>
    <string name="possible_grades">Possible Grades</string>
    <string name="minimum_requirement">Minimum Requirement</string>
    <string name="grade_earned">Grade Earned</string>
    <string name="update">Update</string>
    <string name="grade_hint">-/70</string>

</resources>