<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_assignment_name_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/enter_assignment"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <EditText
                android:id="@+id/dialog_assignment_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="Midterm"
                android:gravity="center"
                android:hint="@string/assignment_name_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_assignment_grade_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/total_points"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dialog_assignment_grade_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="40"
                android:gravity="center"
                android:hint="@string/grade_points_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_assignment_weight_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/weight"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dialog_assignment_weight_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="25"
                android:gravity="center"
                android:hint="@string/grade_weight_hint"
                android:inputType="number" />
        </LinearLayout>
</LinearLayout>