<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7289DA"
    android:padding="10dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/add_term"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_term_name_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/enter_term"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/dialog_term_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="Term "
            android:fontFamily="casual"
            android:hint="@string/term_name_hint"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>


