<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/dialog_course_title_label"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/add_course"
            android:textAppearance="@style/Theme.GradeTracker.Text.Style1"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/dialog_term_target_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="@string/enter_target_grade"
            android:textAppearance="@style/Theme.GradeTracker.Text.Style2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/dialog_term_course_code_label"
            app:layout_constraintTop_toBottomOf="@+id/dialog_term_course_code_label" />

        <TextView
            android:id="@+id/dialog_course_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="@string/enter_course"
            android:textAppearance="@style/Theme.GradeTracker.Text.Style2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_course_title_label" />

        <EditText
            android:id="@+id/dialog_course_name_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:autofillHints="Term "
            android:fontFamily="casual"
            android:hint="@string/enter_course_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_course_name_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/dialog_course_name_label" />

        <TextView
            android:id="@+id/dialog_term_course_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="@string/enter_course_code"
            android:textAppearance="@style/Theme.GradeTracker.Text.Style2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_course_name_label" />

        <EditText
            android:id="@+id/dialog_course_code_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:autofillHints="Term "
            android:fontFamily="casual"
            android:hint="@string/course_code_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_term_course_code_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/dialog_term_course_code_label" />

        <EditText
            android:id="@+id/dialog_course_target_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:autofillHints="Term "
            android:fontFamily="casual"
            android:hint="@string/target_grade_hint"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_term_target_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/dialog_term_target_label" />


        <Button
            android:id="@+id/cancel_Button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dialog_button_background"
            android:text="@string/cancel"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_term_target_label"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/done_Button"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/dialog_button_background"
            android:text="@string/ok"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cancel_Button"
            app:layout_constraintTop_toTopOf="@+id/cancel_Button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="176dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>

