<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/course_fragment_label"
    app:startDestination="@id/StartFragment">

    <fragment
        android:id="@+id/StartFragment"
        android:name="sheridan.simeoni.gradetracker.ui.StartFragment"
        android:label="@string/start_fragment_label"
        tools:layout="@layout/fragment_start">

        <action
            android:id="@+id/action_start_to_year"
            app:destination="@id/TermFragment"
            app:popUpTo="@id/StartFragment" />
    </fragment>
    <fragment
        android:id="@+id/TermFragment"
        android:name="sheridan.simeoni.gradetracker.ui.term.TermFragment"
        android:label="@string/year_fragment_label"
        tools:layout="@layout/fragment_term">
        <action
            android:id="@+id/action_year_to_course"
            app:destination="@id/courseFragment"
            app:popUpTo="@id/TermFragment" />
    </fragment>
    <fragment
        android:id="@+id/courseFragment"
        android:name="sheridan.simeoni.gradetracker.ui.course.CourseFragment"
        android:label="@string/course_fragment_label"
        tools:layout="@layout/fragment_course">
        <action
            android:id="@+id/action_course_to_assignment"
            app:destination="@id/assignmentFragment"
            app:popUpTo="@id/courseFragment" />
    </fragment>
    <fragment
        android:id="@+id/assignmentFragment"
        android:name="sheridan.simeoni.gradetracker.ui.assignment.AssignmentFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_assignment">
        <action
            android:id="@+id/action_assignment_to_grade"
            app:destination="@id/gradeFragment"
            app:popUpTo="@id/assignmentFragment" />
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="BLANK" />
    </fragment>
    <fragment
        android:id="@+id/gradeFragment"
        android:name="sheridan.simeoni.gradetracker.ui.grade.GradeFragment"
        android:label="@string/grade_fragment_label"
        tools:layout="@layout/fragment_grade"/>
    <dialog
        android:id="@+id/aboutDialog"
        android:name="sheridan.simeoni.gradetracker.ui.dialog.AboutDialog"
        android:label="AboutDialog" />
    <action android:id="@+id/action_global_to_about" app:destination="@id/aboutDialog" />
</navigation>