<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="1"
        android:scaleY="1">

        <TextView
            android:id="@+id/settings_greeting_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:textAppearance="@style/Theme.GradeTracker.Text.Style1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Welcome back Tom" />

        <ImageView
            android:id="@+id/settings_nightmode_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/settings_image_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_greeting_label"
            app:srcCompat="@drawable/ic_sun" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_nightmode_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="248dp"
            android:checked="false"
            android:scaleX="2"
            android:scaleY="2"
            android:showText="false"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_greeting_label" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_nightmode_switch">

            <TextView
                android:id="@+id/settings_filler_grade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asap"
                android:text="@string/filler_grade"
                android:textAppearance="@style/Theme.GradeTracker.Text.Style2"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_filler_grade_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="70%"
                android:fontFamily="@font/asap"
                android:hint="@string/filler_grade_hint"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/settings_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/asap"
            android:text="@string/reset_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>