<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>


    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Theme.GradeTracker.Background"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:outlineProvider="bounds"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="175dp" />


            <TextView
                android:id="@+id/dialog_confirmation_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/asap"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/Theme.GradeTracker.Text.Style1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <Button
                android:id="@+id/done_Button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"
                android:text="@string/ok"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.971"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_msg"
                app:rippleColor="#1B1A1A" />

            <TextView
                android:id="@+id/dialog_confirmation_msg"
                style="@style/Theme.GradeTracker.Text.Style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/authors"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/dialog_confirmation_title_label"
                app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_title_label"
                tools:text="MSG here" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>